sable hacks & better creative wave gate